--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -118,7 +118,7 @@
 
     <!-- QS footer text -->
     <string name="qs_footer_text_show_title">頁尾文字</string>
-    <string name="qs_footer_text_string_title">磁貼面板右下方文字</string>
+    <string name="qs_footer_text_string_title">磁貼面板左下方文字</string>
     <string name="qs_footer_text_string_summary">為空將預設使用 KOSP</string>
 
     <!-- Lockscreen settings -->
