--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -267,4 +267,5 @@
     <!-- Hidden apps -->
     <string name="hidden_apps_title">Hidden apps</string>
     <string name="hidden_apps_summary">Applications that should be hidden from launcher</string>
+    <string name="hidden_app_authentication_dialog_title">Unlock to hide apps</string>
 </resources>
