--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -27,15 +27,15 @@
     <string name="monet_engine_settings_title">Moteur Monet</string>
     <string name="monet_engine_settings_summary">Couleur personnalisée, Couleur, Luminosité</string>
     <string name="accurate_shades_title">Utilisez des nuances précises</string>
-    <string name="color_override_title">Sélecteur de couleurs personnalisé</string>
-    <string name="color_override_default_summary">Utiliser la couleur du fond d\'écran</string>
+    <string name="color_override_title">Choisissez votre couleur</string>
+    <string name="color_override_default_summary">Utilise actuellement la couleur du fond d\'écran</string>
     <string name="custom_color_override_summary_placeholder">
-        Couleur choisie : <xliff:g example="#FF0000" id="Color">%1$s</xliff:g>. Définissez une valeur vide pour utiliser la couleur du papier peint.
+        Couleur choisie : <xliff:g example="#FF0000" id="Color">%1$s</xliff:g>. Définissez la valeur #FFFFFF pour utiliser la couleur du fond d\'écran.
     </string>
     <string name="invalid_color_input">Saisie de couleur invalide !</string>
     <string name="chroma_factor_title">Couleur</string>
     <string name="linear_lightness_title">Utiliser une échelle de luminosité personnalisée</string>
-    <string name="white_luminance_title">Luminosités</string>
+    <string name="white_luminance_title">Luminosité</string>
 
     <!-- Title of the setting which enables overlays to customize headline and body fonts. -->
     <string name="theme_customization_font_title">Titre / Style de police</string>
@@ -70,7 +70,7 @@
 
     <!-- Battery -->
     <string name="statusbar_battery_category_title">Batterie</string>
-    <string name="statusbar_battery_style_title">Style d\'icône de batterie</string>
+    <string name="statusbar_battery_style_title">Style d\'icône batterie</string>
     <string name="battery_style_portrait">Portrait</string>
     <string name="battery_style_circle">Cercle</string>
     <string name="battery_style_text">Texte</string>
@@ -82,11 +82,11 @@
 
     <!-- 4G icon -->
     <string name="show_fourg_icon_title">Icône 4G</string>
-    <string name="show_fourg_icon_summary">Afficher l\'icône 4G dans l\'icône du signal à la place de LTE</string>
+    <string name="show_fourg_icon_summary">Remplace l\'icône LTE dans la barre d\'état par l\'icône 4G</string>
 
     <!-- Old mobile type icons -->
-    <string name="use_old_mobiletype_title">Petite icône de type mobile</string>
-    <string name="use_old_mobiletype_summary">Afficher l\'icône du type de mobile en haut de l\'indicateur de signal</string>
+    <string name="use_old_mobiletype_title">Petit icône du type de connexion mobile</string>
+    <string name="use_old_mobiletype_summary">Affiche en petit l\'icône du type de connexion mobile en haut de l\'indicateur de signal</string>
 
     <!-- QS Panel -->
     <string name="qs_settings_title">Réglages rapides</string>
@@ -120,15 +120,15 @@
     <!-- QS footer text -->
     <string name="qs_footer_text_show_title">Afficher un texte en bas des paramètres rapides</string>
     <string name="qs_footer_text_string_title">Personnaliser le texte du pied de page</string>
-    <string name="qs_footer_text_string_summary">Défini sur vide pour le KOSP par défaut</string>
+    <string name="qs_footer_text_string_summary">Défini sur vide pour afficher le mot KOSP par défaut</string>
 
     <!-- Lockscreen settings -->
-    <string name="lockscreen_settings_title">Écran verrouillage</string>
+    <string name="lockscreen_settings_title">Écran de verrouillage</string>
     <string name="lockscreen_settings_summary">Informations de charge, Gestes, Éclairage de bord</string>
 
     <!-- Lockscreen battery info -->
     <string name="lockscreen_charging_info_title">Afficher les informations de charge sur l\'écran de verrouillage</string>
-    <string name="lockscreen_charging_info_summary">Affiche la température, le courant de charge et bien plus lorsque le chargeur est branché</string>
+    <string name="lockscreen_charging_info_summary">Affiche la température, le courant de charge et bien plus lorsque le téléphone est en charge</string>
 
     <string name="screen_off_fod_title">Capteur d\'empreintes digitales lorsque l\'écran est éteint</string>
     <string name="screen_off_fod_summary">Activer le capteur d\'empreintes digitales lorsque l\'écran est éteint (pas d\'icône)</string>
@@ -140,14 +140,14 @@
     <string name="enable_edge_light">Activer l\'éclairage de bord</string>
     <string name="edge_light_intro_text">Afficher une animation le long des bords de l\'écran lors de la pulsation</string>
     <string name="edge_light_always_trigger_on_pulse_title">Toujours déclencher sur impulsion</string>
-    <string name="edge_light_always_trigger_on_pulse_summary">Jouer l\'animation même lorsque l\'éclaire de bord est activé et pas seulement pour les notifications</string>
+    <string name="edge_light_always_trigger_on_pulse_summary">Jouer l\'animation même lorsque l\'éclairage de bord est activé et pas seulement pour les notifications</string>
     <string name="edge_light_repeat_animation_title">Répéter l\'animation</string>
     <string name="edge_light_repeat_animation_summary_on">Répéter jusqu\'à l\'expiration du délai</string>
     <string name="edge_light_repeat_animation_summary_off">Afficher une seule fois</string>
     <string name="edge_light_color_mode_title">Mode de couleur de l\'éclairage de bord</string>
     <string name="accent_color">Couleur d\'accentuation (par défaut)</string>
     <string name="notification_color">Couleur des notifications</string>
-    <string name="wallpaper_color">Couleur du papier peint</string>
+    <string name="wallpaper_color">Couleur du fond d\'écran</string>
     <string name="custom_color">Couleur personnalisée</string>
     <string name="edge_light_custom_color_title">Couleur personnalisée</string>
 
@@ -174,7 +174,7 @@
 
     <!-- Volume key music control -->
     <string name="volume_button_music_control_title">Sauter des pistes avec les boutons de volume</string>
-    <string name="volume_button_music_control_summary">Appuyez longuement sur le volume pour passer à la piste suivante et vice-versa</string>
+    <string name="volume_button_music_control_summary">Appuyez longuement sur le volume haut pour passer à la piste suivante et vice-versa</string>
 
     <!-- Notification count -->
     <string name="status_bar_notif_count_title">Nombre de notifications</string>
