--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -65,6 +65,10 @@
     <string name="screenshot_shutter_sound_title">Screenshot sound</string>
     <string name="screenshot_shutter_sound_summary">Enable screenshot sound and vibration</string>
 
+    <!-- Volume key music control -->
+    <string name="volume_button_music_control_title">Skip tracks with volume buttons</string>
+    <string name="volume_button_music_control_summary">Long press volume up for skipping to the next track and vice-versa</string>
+
     <!-- QS panel settings -->
     <string name="qs_panel_settings_title">QS panel settings</string>
 
