--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -85,6 +85,14 @@
     <string name="artwork_media_background_blur_radius_title">Blur amount for media artwork</string>
     <string name="artwork_media_background_alpha_title">Transparency of media artwork</string>
 
+    <!-- Brightness slider -->
+    <string name="brightness_slider">Brightness slider</string>
+    <string name="qqs_show_brightness_title">Show brightness slider in qqs</string>
+    <string name="brightness_slider_position_title">Brightness slider position</string>
+    <string name="top">Top</string>
+    <string name="bottom">Bottom</string>
+    <string name="show_auto_brightness_button_title">Show auto brightness button</string>
+
     <!-- Statusbar settings -->
     <string name="statusbar_settings_title">Statsubar settings</string>
 
