--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -123,6 +123,14 @@
     <string name="statusbar_network_traffic_rate_text_scale_factor_title">Network traffic rate text scale factor</string>
     <string name="statusbar_network_traffic_rate_text_scale_factor_dialog_title">Scale factor</string>
 
+    <!-- Battery -->
+    <string name="statusbar_battery_category_title">Battery</string>
+    <string name="statusbar_battery_style_title">Battery icon style</string>
+    <string name="battery_style_portrait">Portrait</string>
+    <string name="battery_style_circle">Circle</string>
+    <string name="battery_style_text">Text</string>
+    <string name="statusbar_battery_show_percent_inside_title">Show battery percent inside icon</string>
+
     <!-- Theme settings -->
     <string name="theme_settings_title">Theme settings</string>
 
