--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -272,4 +272,6 @@
     <string name="double_tap_sleep_gesture_title">Double-tap to sleep</string>
     <string name="double_tap_sleep_gesture_summary">Double-tap anywhere on the status bar to put the device to sleep</string>
 
+    <string name="statusbar_icon_title">Icons</string>
+
 </resources>
