--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -30,7 +30,7 @@
     <string name="color_override_title">Выбор цветового акцента</string>
     <string name="color_override_default_summary">Сейчас используется цвет на основе обоев</string>
     <string name="custom_color_override_summary_placeholder">
-        Выбранный цвет: <xliff:g example="#FF0000" id="Color">%1$s</xliff:g>Оставьте поле пустым, чтобы использовать цвет на основе обоев
+        Выбранный цвет: <xliff:g example="#FF0000" id="Color">%1$s</xliff:g>. Оставьте поле пустым, чтобы использовать цвет на основе обоев
     </string>
     <string name="invalid_color_input">Неверный ввод цвета!</string>
     <string name="chroma_factor_title">Насыщенность</string>
@@ -159,6 +159,7 @@
     <string name="statusbar_gesture_title">Жесты</string>
     <string name="double_tap_sleep_gesture_title">Двойной тап для выключения экрана</string>
     <string name="double_tap_sleep_gesture_summary">Дважды тапните в любом месте статусбара, чтобы выключить экран</string>
+
     <string name="miscellaneous_category_title">Другое</string>
 
     <!-- Location privacy indicator -->
