QuickSettings: Rework media artwork notification [2/2]
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -80,12 +80,13 @@
     <string name="qs_panel_settings_title">QS panel settings</string>
     <string name="qs_panel_settings_summary">Media artwork, Brightness slider, QS battery estimates, QS footer text</string>
 
-     <!-- Media artwork -->
+    <!-- Media artwork -->
     <string name="media_category">Media notification</string>
     <string name="artwork_media_background_title">Artwork media background</string>
     <string name="artwork_media_background_summary">Set media artwork as the notification media background</string>
     <string name="artwork_media_background_enable_blur_title">Blur media media artwork background</string>
     <string name="artwork_media_background_blur_radius_title">Blur amount for media artwork</string>
+    <string name="artwork_media_background_fade_filter_title">Fade amount for media artwork</string>
     <string name="artwork_media_background_alpha_title">Transparency of media artwork</string>
 
     <!-- Brightness slider -->
