FlamingoSettings: add linked volume stream pref strings
Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -317,4 +317,7 @@
     <string name="notification_sound_vib_screen_on_title">Notification alert</string>
     <string name="notification_sound_vib_screen_on_summary">Play sound and vibration for notifications when screen is on</string>
 
+    <!-- Volume link notification -->
+    <string name="volume_link_notification_title">Link ring &amp; notification volumes</string>
+
 </resources>
