--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -349,4 +349,15 @@
     <string name="max_refresh_rate_title">Maximum refresh rate</string>
     <string name="refresh_rate_placeholder" translatable="false"><xliff:g id="refresh_rate" example="60">%1$s</xliff:g> Hz</string>
 
+    <!-- Vibration patterns -->
+    <string name="vibration_pattern_title">Ringtone vibration pattern</string>
+    <string name="pattern_dzzz_dzzz">dzzz-dzzz</string>
+    <string name="pattern_dzzz_da">dzzz-da</string>
+    <string name="pattern_mm_mm_mm">mm-mm-mm</string>
+    <string name="pattern_da_da_dzzz">da-da-dzzz</string>
+    <string name="pattern_da_dzzz_da">da-dzzz-da</string>
+    <string name="pattern_custom">Custom</string>
+    <string name="custom_vibration_pattern_title">Custom pattern</string>
+    <string name="custom_vibration_pattern_summary">Set a custom vibration pattern</string>
+
 </resources>
